remove container image from request payload
